kustomize/istio-overlay/argocd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - argocd.n9oh.com
        - blackhawks-facts-dev.n9oh.com
        - blackhawks-facts-stg.n9oh.com
# DO NOT ENABLE THIS when you have full encryption setup on cloudflare dns with proxy
#     tls:
#       httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: n9oh-com-tls # This should match the Certificate secretName
      hosts:
      - argocd.n9oh.com                # This should match a DNS name in the Certificate
      - blackhawks-facts-dev.n9oh.com  # This should match a DNS name in the Certificate
      - blackhawks-facts-stg.n9oh.com  # This should match a DNS name in the Certificate
